--- a/src/components/current-sales/currentSale.css
+++ b/src/components/current-sales/currentSale.css
@@ -99,10 +99,18 @@ thead tr th {
     top:45%;
     left: 36%;
     right: 36%;
+    text-align: center;
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 835px) {
   .mainCurrentSaleDiv {
     width: 830px;
+  }
+  .confirmBoxDiv3{
+    position: absolute;
+    top:45%;
+    left: 25%;
+    right: 20%;
+    text-align: center;
   }
 }
